infra/network/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: adguard
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8s-ctrl-02
      containers:
        - name: unbound
          image: mvance/unbound:1.19.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: unbound-dns-tcp
              containerPort: 5335
              protocol: TCP
            - name: unbound-dns-udp
              containerPort: 5335
              protocol: UDP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
          startupProbe:
            exec:
              command:
                - 'drill'
                - '@127.0.0.1'
                - '-p'
                - '5335'
                - 'cnn.com'
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
          volumeMounts:
            - name: unbound-config
              mountPath: /opt/unbound/etc/unbound/unbound.conf
              subPath: unbound.conf
        - image: adguard/adguardhome:v0.107.48
          imagePullPolicy: IfNotPresent
          name: adguard
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dchp
              containerPort: 67
              protocol: UDP
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - mountPath: /opt/adguardhome/conf
              name: adguard-conf
            - mountPath: /opt/adguardhome/work
              name: adguard-work
      volumes:
        - name: unbound-config
          configMap:
            name: unbound-config
        - name: adguard-conf
          persistentVolumeClaim:
            claimName: adguard-conf
        - name: adguard-work
          persistentVolumeClaim:
            claimName: adguard-work
