infra/network/adguard/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-euclid
  namespace: adguard
spec:
  parentRefs:
    - name: euclid
      namespace: gateway
  hostnames:
    - "adguard.euclid.stonegarden.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adguard
          port: 3000
